Thu Mar 21 23:55:26 GMT 2013  Olly Betts <olly@survex.com>

	* tests/queryparsertest.cc: Add test coverage for change to
	  QueryParser CJK handling in previous commit.

Thu Mar 21 07:21:30 GMT 2013  Greg Banks <gnb@fastmail.fm>

	* queryparser/cjk-tokenizer.cc,queryparser/termgenerator_internal.cc,
	  tests/termgentest.cc: Some CJK codepoints are also punctuation and
	  hence not word characters, and should not really be used as fodder
	  for generating N-grams.  Also fixes a pre-existing bug where every
	  second sequence of N-grammable CJK characters in the text failed to
	  generate the first 2-gram.

Sun Mar 17 20:45:48 GMT 2013  Olly Betts <olly@survex.com>

	* common/pretty.h: Restore space after comma in output.

Sun Mar 17 03:59:52 GMT 2013  Dan Colish <dcolish@gmail.com>

	* common/pretty.h: Correct recursion issue.

Sun Mar 17 02:58:52 GMT 2013  Dan Colish <dcolish@gmail.com>

	* common/pretty.h: Resolve ambiguity by moving operator| to a memeber
	  function of PrettyOStream

Sat Mar 16 21:43:32 GMT 2013  Olly Betts <olly@survex.com>

	* queryparser/queryparser.lemony: std::less provides a total order over
	  pointers, so we can just use that to implement
	  filter_group_id::operator<() - we only need a consistent order so we
	  can use it as the key to a std::map.

Fri Mar 15 06:36:32 GMT 2013  Dan Colish <dcolish@gmail.com>

	* backends/brass/brass_table.cc,backends/chert/chert_table.cc,
	  common/pretty.h: Avoid needlessly casting away const-ness in
	  debug logging.

Fri Mar 15 06:31:32 GMT 2013  Olly Betts <olly@survex.com>

	* matcher/multiandpostlist.cc,matcher/multixorpostlist.cc: Add a
	  couple more LOGCALL annotations.

Fri Mar 15 06:27:42 GMT 2013  Dan Colish <dcolish@gmail.com>

	* api/registry.cc,common/pretty.h: Fix incorrect LOGCALL return value.

Fri Mar 15 06:24:11 GMT 2013  Olly Betts <olly@survex.com>

	* api/registry.cc,common/Makefile.mk,common/registryinternal.h:
	  common/registryinternal.h is only included by api/registry.cc so